--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
+server.port=9000
 
+spring.datasource.url=*
+spring.datasource.username=*
+spring.datasource.password=*
+spring.jpa.hibernate.ddl-auto=update
+
+logging.level.org.hibernate.SQL=Debug
+logging.level.org.hibernate.jdbc.bind=trace
